--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,8 @@ html, body{
     --text-grey: #717171;
 
     /*gradient colors*/
-    --pink:linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
-
+    --skypink:linear-gradient(to bottom, #a8edea 0%, #fed6e3 100%);
+    --sandbrown: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
 }
 
 
@@ -45,8 +45,29 @@ html, body{
     background: white;
     padding: 0 2rem;
     height: 0rem;    /* height creates a collapsable nav menu*/
-    min-height: 40vh;
+    min-height: 10vh;
     overflow-x: hidden;
+}
+
+.toggle-collapse{
+position: absolute;
+top: 0%;
+width: 90%;
+cursor: pointer;
+display: none;
+}
+
+.toggle-icons{
+    display: flex;
+    justify-content: flex-end;
+    padding: 1.7rem 0;;
+}
+.toggle-icons i{
+    font-size: 1.4rem;
+    color: black;
+}
+.toggle-icons i:hover{
+    color:rgb(0, 217, 255);
 }
 
 .nav-items{
@@ -54,12 +75,28 @@ html, body{
     margin: 0;
 
 }
-.nav-link {
-    padding: 1rem 1rem;
-    font-size: 1.2rem;
-    position: relative;
+.nav-link:hover {
+ background: var(--skypink);
+ 
+}
+.nav-link:hover a{
+    Color: rgb(0, 217, 255);
     
 }
+.nav-link {
+    padding: 1rem 1rem;
+    font-size:1.2rem;
+    position: relative;
+    font-family: Quicksand;  
+}
+
+
+/*explora for poems*/
+/*Estonia for icons*/
+/*lora for text*/
+/*quicksand for items*/
+/*Sharmila for headers*/
+
 
 .nav-brand a{           /*icon text*/
     font-size: 3rem;
@@ -69,9 +106,26 @@ html, body{
     color: black;
 }
 
-.social{
-
+.social i{
     padding: 1rem 0;
-
+    font-size: 1rem;
+    color: rgb(82, 82, 82);
+}
+.social i:hover{
+    color:rgb(0, 217, 255);
 }
 /*------*------end navbar styling---------*--------*/
+
+
+
+
+/*-----------------Viewport has less than or equal 750px ----------------------*/
+@media only screen and (max-width:750px) {
+    .nav-menu,.nav-items{
+        flex-direction: column;
+    }
+    .toggle-collapse{
+        display: initial;
+    }
+}
+/*-----------------Viewport has less than or equal 750px ----------------------*/
