--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ display: none;
     color:rgb(0, 217, 255);
 }
 
+.collapse{
+    height: 20rem;
+}
+
 .nav-items{
     display: flex;
     margin: 0;
@@ -84,10 +88,12 @@ display: none;
     
 }
 .nav-link {
-    padding: 1rem 1rem;
-    font-size:1.2rem;
+    padding: 1.6rem 1rem;
+    font-size:1.1rem;
     position: relative;
     font-family: Quicksand;  
+    font-size:1.1rem;
+
 }
 
 
