--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ html, body{
     height: 0rem;    
     min-height: 10vh;
     overflow-x: hidden;
+    transition: height 1s ease-in-out;
 }
 .nav .nav-menu{
     justify-content: space-between;
